<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/assign"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/assign1"
                android:textColor="@color/colorText" />

            <ImageButton
                android:id="@+id/historyBtn"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:tint="@color/historyColorBtn"
                app:srcCompat="@drawable/history" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">


            <TextView
                android:id="@+id/sales"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sales"
                android:textColor="@color/colorText" />

            <com.aldoapps.autoformatedittext.AutoFormatEditText
                android:id="@+id/inputSales"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/my_border"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/sharePercen"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sharePercen"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/inputSharePercentage"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/my_border"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/salesMinusShare"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/salesMinusShare"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/inputSalesMinusShare"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/my_border"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/colorText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/salesShare"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/salesShare"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/inputSalesShare"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/my_border"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/colorText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/my_border"
                android:text="@string/calBtn"
                android:textColor="@color/colorText" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>